# playground-haskell-http-api

./: .ghci  Example.hs  Main.hs  Types.LoginResponse.hs  Types.MediaScreeningKeywordList.hs  Types.hs  default.nix  http-api.cabal  notes.md
Types/: LoginResponse.hs  MediaScreeningKeywordList.hs
