name:                http-api
version:             0.1.0.0
-- synopsis:
-- description:
-- homepage:
-- license:
-- license-file:        LICENSE
-- author:
-- maintainer:
-- copyright:
-- category:            Web
build-type:          Simple
cabal-version:       2.0

executable http-api
  main-is:             Main.hs
  other-modules:       Types
                     , Types.LoginResponse
                     , Types.MediaScreeningKeywordList
                     , Examples
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     -- Cabal needed for HIEs cabal-helper, needs to match the
                     -- cabal(-install) version in default.nix
                     , Cabal == 3.2.0.0
                     , aeson
                     , http-client
                     , http-conduit
                     , http-types
                     , raw-strings-qq
                     , time
